# ai-agents-lab

./: .gitignore  .rc  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: pr-instructions.prompt.md
1_foundations/: 3_lab3_Aitor.ipynb  app.py
2_chatbot_rag_evaluation/: Guia.md  app.py  chat.py  controller.py  evaluator.py  finder.py  rag_v1.py  retriever.py  tools.py
2_chatbot_rag_evaluation/knowledge_base/: AI_RAG_Chatbot_Python_Lab_Case.txt  Core_Professional_Profile_NET_Azure_AI_RAG.txt  NN_Cloud_API_Leadership_Deep_Dive_ApiOps.txt  Personal_Growth_Profile_Aitor.txt  Project_DeepDive_NET8_AI_MCP_Integration.txt  linkedin.txt  summary.txt
2_chatbot_rag_evaluation/tests/: test_embeddings.py
