[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.0",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anthropic>=0.49.0",
    "anyio>=4.11.0",
    "attrs>=25.4.0",
    "autoflake>=2.3.1",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "backoff>=2.2.1",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "blinker>=1.9.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "build>=1.3.0",
    "cachelib>=0.13.0",
    "cachetools>=6.2.1",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "chromadb>=1.2.1",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "dash-core-components>=2.0.0",
    "dash-design-kit>=0.0.1",
    "dash-html-components>=2.0.0",
    "dash-mantine-components>=2.3.0",
    "dash-table>=5.0.0",
    "dataclasses-json>=0.6.7",
    "datasets>=4.2.0",
    "dill>=0.4.0",
    "distro>=1.9.0",
    "durationpy>=0.10",
    "fastapi>=0.119.0",
    "ffmpy>=0.6.3",
    "filelock>=3.20.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flatbuffers>=25.9.23",
    "fonttools>=4.60.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.9.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "googleapis-common-protos>=1.71.0",
    "gradio>=5.22.0",
    "gradio-client>=1.13.3",
    "greenlet>=3.2.4",
    "gritql>=0.2.0",
    "groovy>=0.1.2",
    "grpcio>=1.70.0",
    "gspread>=6.2.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.31.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=0.35.3",
    "humanfriendly>=10.0",
    "idna>=3.11",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "ipywidgets>=8.1.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jiter>=0.11.0",
    "joblib>=1.5.2",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "kagglehub>=0.3.13",
    "kiwisolver>=1.4.9",
    "kubernetes>=34.1.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.6",
    "langchain-cli>=0.0.37",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.79",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langserve>=0.3.3",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.7",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "mdurl>=0.1.2",
    "mmh3>=5.2.0",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.16",
    "mypy-extensions>=1.1.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "newsapi-python>=0.2.7",
    "newsapi-python-client>=0.2.4",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "oauthlib>=3.3.1",
    "ollama>=0.6.0",
    "onnxruntime>=1.23.1",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp-proto-common>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-proto>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-semantic-conventions>=0.58b0",
    "orjson>=3.11.3",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pathspec>=0.12.1",
    "pillow>=11.3.0",
    "platformdirs>=4.5.0",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "posthog>=5.4.0",
    "propcache>=0.4.1",
    "protobuf>=5.29.5",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybase64>=1.4.2",
    "pydantic>=2.11.10",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.11.0",
    "pydub>=0.25.1",
    "pyflakes>=3.4.0",
    "pygame>=2.6.1",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "pypika>=0.48.9",
    "pyproject-hooks>=1.2.0",
    "pyreadline3>=3.5.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "referencing>=0.36.2",
    "regex>=2025.9.18",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "retrying>=1.4.2",
    "rich>=14.2.0",
    "rpds-py>=0.27.1",
    "rsa>=4.9.1",
    "ruff>=0.14.0",
    "safehttpx>=0.1.6",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "semantic-kernel>=1.25.0",
    "semantic-version>=2.10.0",
    "sendgrid>=6.11.0",
    "sentence-transformers>=5.1.1",
    "setuptools>=78.1.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smithery>=0.1.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "soupsieve>=2.8",
    "speedtest-cli>=2.1.3",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=1.8.2",
    "starlette>=0.48.0",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.1",
    "tomlkit>=0.13.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.19.2",
    "typing-extensions>=4.15.0",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.3.0",
    "uvicorn>=0.37.0",
    "vizro>=0.1.46",
    "watchfiles>=1.1.1",
    "websocket-client>=1.9.0",
    "websockets>=14.2",
    "werkzeug>=3.1.1",
    "wikipedia>=1.4.0",
    "wrapt>=2.0.0",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
    "zipp>=3.23.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
